# hyvr

./: .gitignore  LICENCE  README.md  README.rst  deploy.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml  quartodoc.yml
HyVR_fork.egg-info/: SOURCES.txt
docs/: basic_usage.ipynb  changelog.rst  conf.py  example.rst  faq.rst  index.rst  inout.rst  methods.rst  more.rst
docs/.ipynb_checkpoints/: basic_usage-checkpoint.ipynb
docs/modules/: hyvr.objects.rst  hyvr.rst  hyvr.tools.rst
examples/: .gitingnore
examples/ammer/: ammer.py  ammer_notebook.ipynb  ammer_notebook_hyvrmodel.ipynb  ammer_v0901.py  ammer_v2606.py  borehole_plot.py  fromto_units.csv  gaussian_kernel_regression.py  loc.csv  top_botm.csv
examples/channels/: test_channels.ipynb  test_gauss_surface.ipynb
examples/demonstration/: model_progression.py
examples/heinz_highenergy/: heinz_highenergy.py  test_heinz.py
hyvr/: utils.py
hyvr/objects/: channel.py
quartodoc/: _quarto.yml  _sidebar.yaml  index.qmd  installation.qmd  intro.qmd  methods.qmd  objects.json
quartodoc/_site/: index.html  intro.html  methods.html  search.json
quartodoc/img/: erosion_conformal.excalidraw  vertical_disp.excalidraw
quartodoc/reference/: index.qmd  objects.channel.channel.qmd  objects.sheet.sheet.qmd  objects.trough.half_ellipsoid.qmd  tools.contact_surface.qmd  tools.ferguson_curve.qmd  tools.specsim_surface.qmd
quartodoc/tutorials/: simple_channel.ipynb  simple_lense.ipynb
reports/coverage/: coverage.xml
reports/flake8/: docs.conf.report.html  (+49 more)
tests/: README.md  test_angles.py  test_surface.py  test_volume.py
tutorials/: more_complex_structure.ipynb  simple_channel.ipynb
(+25 files in other folders)
